[gd_scene load_steps=6 format=3 uid="uid://c7pooy74o48nl"]

[ext_resource type="Script" path="res://Scripts/inventory_slot.gd" id="1_gw0nr"]
[ext_resource type="Texture2D" uid="uid://vpf8t6vnyc50" path="res://Art/AllMinerals/PNG/obsidian01.png" id="2_kf8nk"]
[ext_resource type="FontFile" uid="uid://cxpcmv16un05" path="res://Art/Fonts/m3x6.ttf" id="3_lniob"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_73yr8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ahyu"]

[node name="Inventory Slot" type="Control"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 3
anchors_preset = 0
offset_right = 90.0
offset_bottom = 90.0
script = ExtResource("1_gw0nr")

[node name="Outer Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.329412, 1, 1)

[node name="Inner Border" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 88.0
offset_bottom = 88.0
color = Color(0.423529, 0.423529, 0.423529, 1)

[node name="Item Icon" type="Sprite2D" parent="Inner Border"]
position = Vector2(43, 43)
scale = Vector2(5, 5)
texture = ExtResource("2_kf8nk")

[node name="Item Quantity" type="Label" parent="Inner Border"]
layout_mode = 0
offset_left = 59.0
offset_top = 36.0
offset_right = 99.0
offset_bottom = 119.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_lniob")
theme_override_font_sizes/font_size = 70
text = "1"
horizontal_alignment = 1

[node name="Item Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_73yr8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ahyu")

[node name="Details Panel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -135.0
offset_right = 240.0
offset_bottom = -5.0
color = Color(0.226563, 0.328125, 0.996094, 1)

[node name="Item Name" type="Label" parent="Details Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_right = 10.0
offset_bottom = 51.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_lniob")
theme_override_font_sizes/font_size = 60
text = "Name"

[node name="Item Type" type="Label" parent="Details Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -25.5
offset_right = 10.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_lniob")
theme_override_font_sizes/font_size = 60
text = "Type"

[node name="Item Effect" type="Label" parent="Details Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -51.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_lniob")
theme_override_font_sizes/font_size = 60
text = "Effect"

[node name="Usage Panel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -135.0
offset_right = 240.0
offset_bottom = -5.0
color = Color(0.226563, 0.328125, 0.996094, 1)

[node name="Use Button" type="Button" parent="Usage Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 5.0
offset_right = 115.0
offset_bottom = 61.0
grow_horizontal = 2
theme_override_colors/font_pressed_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_colors/font_hover_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_fonts/font = ExtResource("3_lniob")
theme_override_font_sizes/font_size = 60
text = "Use"

[node name="Drop Button" type="Button" parent="Usage Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -50.0
offset_right = 115.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_pressed_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_colors/font_hover_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_fonts/font = ExtResource("3_lniob")
theme_override_font_sizes/font_size = 60
text = "Drop
"

[connection signal="mouse_entered" from="Item Button" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="Item Button" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="Item Button" to="." method="_on_item_button_pressed"]
